syntax = "proto2";
package pb;

import "gogo.proto";

option (marshaler_all) = true;
option (sizer_all) = true;
option (unmarshaler_all) = true;
option (goproto_getters_all) = false;
option (goproto_enum_prefix_all) = false;

enum EntryType {
	EntryNormal     = 0;
	EntryConfChange = 1;
}

message Entry {
	optional uint64     Term  = 2 [(nullable) = false]; // must be 64-bit aligned for atomic operations
	optional uint64     Index = 3 [(nullable) = false]; // must be 64-bit aligned for atomic operations
	optional EntryType  Type  = 1 [(nullable) = false];
	optional bytes      Data  = 4;
}

message SnapshotMetadata {
	optional ConfState conf_state = 1 [(nullable) = false];
	optional uint64    index      = 2 [(nullable) = false];
	optional uint64    term       = 3 [(nullable) = false];
}

message Snapshot {
	optional bytes            data     = 1;
	optional SnapshotMetadata metadata = 2 [(nullable) = false];
}

enum MessageType {
	MsgHup             = 0;
	MsgBeat            = 1;
	MsgProp            = 2;
	MsgApp             = 3;
	MsgAppResp         = 4;
	MsgVote            = 5;
	MsgVoteResp        = 6;
	MsgSnap            = 7;
	MsgHeartbeat       = 8;
	MsgHeartbeatResp   = 9;
	MsgUnreachable     = 10;
	MsgSnapStatus      = 11;
	MsgCheckQuorum     = 12;
	MsgTransferLeader  = 13;
	MsgTimeoutNow      = 14;
}

message Message {
	optional MessageType type        = 1  [(nullable) = false];
	optional uint64      to          = 2  [(nullable) = false];
	optional uint64      from        = 3  [(nullable) = false];
	optional uint64      term        = 4  [(nullable) = false];
	optional uint64      logTerm     = 5  [(nullable) = false];
	optional uint64      index       = 6  [(nullable) = false];
	repeated Entry       entries     = 7  [(nullable) = false];
	optional uint64      applied     = 8  [(nullable) = false];
	optional uint64      committed   = 9  [(nullable) = false];
	optional Snapshot    snapshot    = 10  [(nullable) = false];
	optional bool        reject      = 11 [(nullable) = false];
	optional uint64      rejectHint  = 12 [(nullable) = false];
}

message HardState {
	optional uint64 term   = 1 [(nullable) = false];
	optional uint64 vote   = 2 [(nullable) = false];
	optional uint64 commit = 3 [(nullable) = false];
}

message ConfState {
	repeated uint64 nodes = 1;
}

enum ConfChangeType {
	ConfChangeAddNode    = 0;
	ConfChangeRemoveNode = 1;
	ConfChangeUpdateNode = 2;
}

message ConfChange {
	optional uint64          ID      = 1 [(nullable) = false];
	optional ConfChangeType  Type    = 2 [(nullable) = false];
	optional uint64          NodeID  = 3 [(nullable) = false];
	optional bytes           Context = 4;
}
